# elephant-diffuser

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  mkdocs.yml  release-plz.toml
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml
docs/: PRD.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-hand-write-the-diffuser-the-one-crypto-exception.md  0002-standalone-zero-dependency-crate-extracted-from-bitlocker-core.md  0003-format-fidelity-le-words-and-reference-constants.md  0004-forbid-unsafe-and-panic-free-modular-indexing.md  0005-low-msrv-floor-decoupled-from-dev-toolchain.md  0006-tier-1-validation-in-situ-via-libbde-oracle.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decrypt.rs
src/: lib.rs
supply-chain/: config.toml
