[package]
name = "elephant-diffuser-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.elephant-diffuser]
path = ".."

# Prevent this from interfering with the parent package.
[workspace]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_decrypt"
path = "fuzz_targets/fuzz_decrypt.rs"
test = false
doc = false
bench = false
